# Poker

./: .gitignore
PoluPoker/: .gitignore  CMakeLists.txt  PoluPoker.pro  authentication.cpp  authentication.h  authentication.ui  button.cpp  button.h  card.cpp  card.h  dialogwindow.cpp  dialogwindow.h  gameui.cpp  gameui.h  gameui.ui  host.config  images.qrc  load.cpp  load.h  load.ui  loader.cpp  loader.h  loader.ui  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  screencontroller.cpp  screencontroller.h  seat.cpp  seat.h  senderreciver.cpp  senderreciver.h  sounds.qrc  table.cpp  table.h  table.ui
PoluPoker/authentication/: authentication.cpp  authentication.h  authentication.ui
PoluPoker/gameUI/: card.cpp  card.h  gameui.cpp  gameui.h  gameui.ui  player.cpp  player.h  seat.cpp  seat.h
PoluPoker/jsonExamples/: chat.json  chooseSeat client.json  connectTable client.json  tableInfo server.json
PoluPoker/menu/: mainwindow.cpp  mainwindow.h
PoluPoker/serverChatting/: senderreciver.cpp  senderreciver.h  serverconnecter.cpp  serverconnecter.h
PoluPokerServer/: .gitignore  CMakeLists.txt  PoluPokerServer.pro  card.cpp  card.h  combination.cpp  combination.h  command.cpp  command.h  commandauth.h  commandconnect.cpp  commandconnect.h  commandcreate.cpp  commandcreate.h  commandlogin.cpp  commandlogin.h  commandregist.cpp  commandregist.h  image.qrc  main.cpp  player.cpp  player.h  sender.cpp  sender.h  server.cpp  server.h  table.cpp  table.h  users.db
PoluPokerServer/commands/: command.h  commandauth.cpp  commandauth.h  commandconnect.cpp  commandconnect.h  commandcreate.cpp  commandcreate.h
PoluPokerServer/table/: card.cpp  card.h  player.cpp  player.h  table.cpp  table.h
jsonExamples/: chat.json  connectTable client.json  connectTable server.json  createTable client.json  regist⁄login client.json  regist⁄login server.json  update tables list.json
